--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,9 @@
     <string name="aceptaTerminos">Acepto los terminos y condiciones de uso</string>
     <string name="contrase_a">Contraseña</string>
     <string name="ingresar">Ingresar</string>
+    <string name="user">Usuario</string>
+    <string name="ingrese_su_usuario">Ingrese su usuario</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hint_name">Nombre</string>
 </resources>
