--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="ingrese_su_usuario">Ingrese su usuario</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="hint_name">Nombre</string>
+    <string name="medicamentos">Medicamentos</string>
+    <string name="citas_medicas">Citas medicas</string>
+    <string name="citas_a_examenes">Citas a examenes</string>
+    <string name="indicaciones">Indicaciones</string>
 </resources>
