--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Proyecto_Agenda</string>
+    <string name="preferences_file">bootcamp.cl.proyecto_Agenda.PREFERENCES_FILE_KEY</string>
     <string name="login">Ingresar</string>
     <string name="create_account">Crear cuenta</string>
     <string name="mail">Mail</string>
